# WireboundTextBaker

./: CMakeLists.txt  Parsing.h  README.md  Renderer.h  Serializing.cpp  Shader.h  Texture.h
example/: BitmapsInfo.h  PhrasesTexCoords.h  README.md  bitmap_info.csv  en.txt  en_prerendered_header.cpp  en_prerendered_header.h  starting_bitmap_info.csv  tex_coords_en_prerendered_header.h
shaders/: Glyph.frag
src/: Common.h  Details.h  Parsing.cpp  Renderer.cpp  Serializing.cpp  Serializing.h  SetupWindow.h  Shader.cpp  Texture.cpp  main.cpp
